--- a/index.html
+++ b/index.html
@@ -11,76 +11,28 @@
   <body>
     <section class="container" id="container">
       <div class="first-row row">
-        <div class="after">
-          <p class="after-calculate"></p>
-        </div>
-        <div class="before">
-          <p class="before-calculate"></p>
-        </div>
+        <div class="after">0</div>
+        <div class="before">0</div>
       </div>
-      <div class="second-row row">
-        <div class="clear red row">
-          <p>CLEAR</p>
-        </div>
-        <div class="delete green row">
-          <p>DELETE</p>
-        </div>
-      </div>
-      <div class="normal-row row">
-        <div class="seven red row">
-          <p>7</p>
-        </div>
-        <div class="eight green row">
-          <p>8</p>
-        </div>
-        <div class="nine red row">
-          <p>9</p>
-        </div>
-        <div class="divide green row">
-          <p>÷</p>
-        </div>
-      </div>
-      <div class="normal-row row">
-        <div class="four green row">
-          <p>4</p>
-        </div>
-        <div class="five red row">
-          <p>5</p>
-        </div>
-        <div class="six green row">
-          <p>6</p>
-        </div>
-        <div class="mutiply red row">
-          <p>x</p>
-        </div>
-      </div>
-      <div class="normal-row row">
-        <div class="one red row">
-          <p>1</p>
-        </div>
-        <div class="two green row">
-          <p>2</p>
-        </div>
-        <div class="three red row">
-          <p>3</p>
-        </div>
-        <div class="minus green row">
-          <p>-</p>
-        </div>
-      </div>
-      <div class="normal-row row">
-        <div class="decimal green row">
-          <p>.</p>
-        </div>
-        <div class="zero red row">
-          <p>0</p>
-        </div>
-        <div class="equal green row">
-          <p>=</p>
-        </div>
-        <div class="plus red row">
-          <p>+</p>
-        </div>
+      <div class="button-container row">
+        <button class="clear">CLEAR</button>
+        <button class="delete">DELETE</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="btn-operator">÷</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="btn-operator">x</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="btn-operator">-</button>
+        <button>.</button>
+        <button>0</button>
+        <button class="btn-equals">=</button>
+        <button class="btn-operator">+</button>
       </div>
     </section>
   </body>
