--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
   </head>
   <body>
     <section class="container" id="container">
-      <div class="first-row row">
+      <div class="display-row">
         <div class="after">0</div>
         <div class="before">0</div>
       </div>
-      <div class="button-container row">
-        <button class="clear">CLEAR</button>
-        <button class="delete">DELETE</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="btn-operator">÷</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="btn-operator">x</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="btn-operator">-</button>
-        <button>.</button>
-        <button>0</button>
-        <button class="btn-equals">=</button>
-        <button class="btn-operator">+</button>
+      <div class="button-container">
+        <button class="btn clear">CLEAR</button>
+        <button class="btn delete">DELETE</button>
+        <button class="btn seven">7</button>
+        <button class="btn eight">8</button>
+        <button class="btn nine">9</button>
+        <button class="btn btn-operator divide">÷</button>
+        <button class="btn four">4</button>
+        <button class="btn five">5</button>
+        <button class="btn six">6</button>
+        <button class="btn btn-operator mutiply">x</button>
+        <button class="btn one">1</button>
+        <button class="btn two">2</button>
+        <button class="btn three">3</button>
+        <button class="btn-operator minus">-</button>
+        <button class="btn decimal">.</button>
+        <button class="btn zero">0</button>
+        <button class="btn btn-equals">=</button>
+        <button class="btn btn-operator plus">+</button>
       </div>
     </section>
   </body>
