Add operator function

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <section class="container" id="container">
       <div class="display-row">
-        <div class="after">0</div>
-        <div class="before">0</div>
+        <div class="after"></div>
+        <div class="before"></div>
       </div>
       <div class="button-container">
         <button class="btn clear">CLEAR</button>
@@ -28,7 +28,7 @@
         <button class="btn one">1</button>
         <button class="btn two">2</button>
         <button class="btn three">3</button>
-        <button class="btn-operator minus">-</button>
+        <button class="btn btn-operator minus">-</button>
         <button class="btn decimal">.</button>
         <button class="btn zero">0</button>
         <button class="btn btn-equals">=</button>
